--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Psychedelic Camera Tapestry (The Deep Dive) - Optimized</title>
+    <title>coco</title>
     <style>
         /* Base Styles */
         body, html {
@@ -189,7 +189,7 @@
             <div id="error-msg"></div>
         </div>
 
-        <div id="title-overlay">ACID_CAM_DEEP_DIVE</div>
+        <div id="title-overlay">ACID_CAM_NIGGER_KILLER/div>
         
         <video id="videoElement" autoplay playsinline muted></video>
         <canvas id="canvasElement"></canvas>
@@ -775,3 +775,4 @@
     </script>
 </body>
 </html>
+
