--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>coco</title>
+    <title>Psychedelic Camera Tapestry (The Deep Dive) - Optimized</title>
     <style>
         /* Base Styles */
         body, html {
@@ -184,12 +184,12 @@
 
     <div id="container">
         <div id="start-overlay">
-            <h1 style="color:white; margin-bottom: 30px; font-family: 'Courier New'; text-align: center;">ACID_CAM_DEEP_DIVE</h1>
+            <h1 style="color:white; margin-bottom: 30px; font-family: 'Courier New'; text-align: center;">NIGGER_MIND_KILLER</h1>
             <button id="start-btn" onclick="initExperience()">ENTER THE VOID</button>
             <div id="error-msg"></div>
         </div>
 
-        <div id="title-overlay">ACID_CAM_NIGGER_KILLER/div>
+        <div id="title-overlay">NIGGER_MIND_KILLER</div>
         
         <video id="videoElement" autoplay playsinline muted></video>
         <canvas id="canvasElement"></canvas>
@@ -775,4 +775,3 @@
     </script>
 </body>
 </html>
-
